--- a/Introduction_R.Rmd
+++ b/Introduction_R.Rmd
@@ -669,7 +669,7 @@ employee_data %>%
 
 Three changes are spotted here: 1. The type of the graph **violin plot** is specified instead of bar plot. 2. In contrast to the bar plot, the violin plot can be done directly over the full data set and does not require any pre-processing of it. 3. The violin plot helps to notice that older employees have better performance, younger employees have lower performance, while medium performers are found across all ages.
 
-Once the user understands this hypothesis, the type of graph can be chosen to support the claim further. The following scatter plot provides a visual analysis of employee turnover risk by mapping **Tenure** against **Salary**, with additional dimensions of **Age** and **Employment status**. Each point represents an employee, where the x-axis shows years of service and the y-axis displays annual salary. The size of each point reflects the employee's age, while the color indicates their turnover risk level—ranging from low risk to terminated. This visualization helps identify patterns, such as whether long-tenured, low-performing employees are at higher risk, or if certain age groups are more prone to termination or retention challenges.
+Once the user understands this hypothesis, the type of graph can be chosen to support the claim further. The following scatter plot provides a visual analysis of employee turnover risk by mapping **Tenure** against **Salary**, with additional dimensions of **Age** and **sEmployment status**. Each point represents an employee, where the x-axis shows years of service and the y-axis displays annual salary. The size of each point reflects the employee's age, while the color indicates their turnover risk level—ranging from low risk to terminated. This visualization helps identify patterns, such as whether long-tenured, low-performing employees are at higher risk, or if certain age groups are more prone to termination or retention challenges.
 
 ```{r  message = FALSE, warning= FALSE, eval=TRUE}
 
